XO_Project_UAT/Project--XOGrp--UAT/src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>LocalSalesMarket__c</fullName>
        <description>Phase 1</description>
        <label>Local Sales Market(deprecated)</label>
        <picklist>
            <picklistValues>
                <fullName>AK - Alaska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL - Alabama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR - Arkansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ - Phoenix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ - Tucson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA - Central CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA - Los Angeles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAN - Toronto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA - Orange County</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA - Palm Springs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA - San Diego</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA - San Fran/Bay Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA - Santa Barbara/Ventura</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO - Colorado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT - Connecticut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC - DC/MD/Northern VA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL - Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL - Northern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL - South</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL - West Coast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA - Georgia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA - Savannah/Coastal Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI - Hawaii</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA - Iowa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID - Idaho</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL - Central Illinois</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL - Chicago</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL - Chicago Suburbs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN - Indiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY - Kentucky</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Local_Partners_Claiming__c</fullName>
        <defaultValue>false</defaultValue>
        <description>csp-1937</description>
        <label>Local Partners Claiming</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Local_Sales_Market_Formula__c</fullName>
        <description>SF-972 and SF-1401</description>
        <formula>Local_Sales_Market__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Local Sales Market Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Sales_Market_Hubspot_Formula__c</fullName>
        <description>To copy down the value of Local Sales Market and surface it on a Hubspot Record. SF-2248</description>
        <formula>Local_Sales_Market__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Local Sales Market Hubspot Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Sales_Market__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Local Sales Market</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>You may only select active Markets within the Primary Brand</errorMessage>
            <filterItems>
                <field>Market__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Market__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Marketplace_Health_Color__c</fullName>
        <formula>CASE( Marketplace_Health_Number__c, 
1,  IMAGE(&quot;https://xogrp--c.na55.content.force.com/servlet/servlet.ImageServer?id=015f10000038QHA&amp;oid=00Dj0000000KVB8&quot;,&quot;Red&quot;,20,60), 
2, IMAGE(&quot;https://xogrp--c.na55.content.force.com/servlet/servlet.ImageServer?id=015f10000038QHU&amp;oid=00Dj0000000KVB8&quot;,&quot;Blitz&quot;,20,60),
3, IMAGE(&quot;https://xogrp--c.na55.content.force.com/servlet/servlet.ImageServer?id=015f10000038QHP&amp;oid=00Dj0000000KVB8&quot;,&quot;Orange&quot;,20,60), 
4, IMAGE(&quot;https://xogrp--c.na55.content.force.com/servlet/servlet.ImageServer?id=015f10000038QGv&amp;oid=00Dj0000000KVB8&quot;,&quot;Yellow&quot;,20,60), 
5, IMAGE(&quot;https://xogrp--c.na55.content.force.com/servlet/servlet.ImageServer?id=015f10000038QHZ&amp;oid=00Dj0000000KVB8&quot;,&quot;Green&quot;,20,60), 
IMAGE(&quot;https://xogrp--c.na55.content.force.com/servlet/servlet.ImageServer?id=015f10000038QH0&amp;oid=00Dj0000000KVB8&quot;,&quot;Grey&quot;,20,60) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Marketplace Health Color</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketplace_Health_Number__c</fullName>
        <formula>CASE( Primary_Category__r.Category_Code__c,
&quot;ACC&quot;, Zip__r.ACC__c,
&quot;ALP&quot;, Zip__r.ALP__c,
&quot;BAR&quot;, Zip__r.BAR__c,
&quot;BEA&quot;, Zip__r.BEA__c,
&quot;BNB&quot;, Zip__r.BNB__c,
&quot;BPH&quot;, Zip__r.BPH__c,
&quot;BWP&quot;, Zip__r.BWP__c,
&quot;CAL&quot;, Zip__r.CAL__c,
&quot;CAT&quot;, Zip__r.CAT__c,
&quot;CAC&quot;, Zip__r.CAC__c,
&quot;CER&quot;, Zip__r.CER__c,
&quot;DNC&quot;, Zip__r.DNC__c,
&quot;DEC&quot;, Zip__r.DEC__c,
&quot;DST&quot;, Zip__r.DST__c,
&quot;DJS&quot;, Zip__r.DJS__c,
&quot;ENS&quot;, Zip__r.ENS__c,
&quot;FAV&quot;, Zip__r.FAV__c,
&quot;JWL&quot;, Zip__r.JWL__c,
&quot;FIT&quot;, Zip__r.FIT__c,
&quot;FLO&quot;, Zip__r.FLO__c,
&quot;HRB&quot;, Zip__r.HRB__c,
&quot;INV&quot;, Zip__r.INV__c,
&quot;LIT&quot;, Zip__r.LIT__c,
&quot;MEN&quot;, Zip__r.MEN__c,
&quot;NLW&quot;, Zip__r.NLW__c,
&quot;OPC&quot;, Zip__r.OPC__c,
&quot;PHB&quot;, Zip__r.PHB__c,
&quot;REC&quot;, Zip__r.REC__c,
&quot;REG&quot;, Zip__r.REG__c,
&quot;RNT&quot;, Zip__r.RNT__c,
&quot;SVS&quot;, Zip__r.SVS__c,
&quot;SPV&quot;, Zip__r.SPV__c,
&quot;TEC&quot;, Zip__r.TEC__c,
&quot;TRA&quot;, Zip__r.TRA__c,
&quot;TRV&quot;, Zip__r.TRV__c,
&quot;VHV&quot;, Zip__r.VHV__c,
&quot;VAR&quot;, Zip__r.VAR__c,
&quot;VID&quot;, Zip__r.VID__c,
&quot;BDS&quot;, Zip__r.BDS__c,
&quot;WCK&quot;, Zip__r.WCK__c,
&quot;DES&quot;, Zip__r.DES__c,
&quot;WJW&quot;, Zip__r.WJW__c,
&quot;WPH&quot;, Zip__r.WPH__c,
&quot;PLN&quot;, Zip__r.PLN__c,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Marketplace Health (Number)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Marketplace_Health_Text__c</fullName>
        <formula>CASE( Marketplace_Health_Number__c, 
1, &quot;Minimal&quot;, 
2, &quot;Blitz&quot;, 
3, &quot;Balanced&quot;, 
4, &quot;Good&quot;, 
5, &quot;Excellent&quot;, 
&quot;Unknown&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates traffic health
Excellent:Sustains many new vendors. Proactive sale
Good:Sustains some new vendors. Proactive sale
Balanced:Sustains paid vendors. Reactive sale
Minimal:Cannot sustain paid vendors. Reactive sale
Unknown:Insufficient data</inlineHelpText>
        <label>Marketplace Health</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Negative_Disposition_Reason__c</fullName>
        <description>csp-2440</description>
        <label>Negative Disposition Reason</label>
        <picklist>
            <controllingField>Status</controllingField>
            <picklistValues>
                <fullName>Duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cannot Verify Online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No contact information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ecommerce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Authority</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Out of Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vendor outside US</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Need</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wrong Industry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Timeline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cannot Connect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bad Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Do Not Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed Claim Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing Required Information</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Neighborhood__c</fullName>
        <description>Phase 1</description>
        <label>Neighborhood</label>
        <picklist>
            <controllingField>Region__c</controllingField>
            <picklistValues>
                <fullName>Bergen County Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Morris County Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warren County Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Princeton area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trenton area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monmouth County Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ocean County Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cherry Hill Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gloucester County Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Atlantic City Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cape May Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East Hampton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Montauk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nassau County</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North Fork</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sag Harbor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southampton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suffolk County</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Downtown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Harlem</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Midtown East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Midtown West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upper East Side</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upper West Side</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Astoria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Long Island City</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hunter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Woodstock</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saratoga Springs</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NoteNotIn__c</fullName>
        <description>Phase 1</description>
        <label>Notes for not including</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_Of_Event_Completions__c</fullName>
        <description>The sum of all events a contact has experienced. This is automatically set by HubSpot for each contact.</description>
        <inlineHelpText>The sum of all events a contact has experienced. This is automatically set by HubSpot for each contact.</inlineHelpText>
        <label>Number Of Event Completions</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Page_Views__c</fullName>
        <description>The sum of all pages a contact has seen on your website. This is automatically set by HubSpot for each contact.</description>
        <inlineHelpText>The sum of all pages a contact has seen on your website. This is automatically set by HubSpot for each contact.</inlineHelpText>
        <label>Number of Page Views</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Visits__c</fullName>
        <description>The sum of all visits a contact has made to your website. This is automatically set by HubSpot for each contact.</description>
        <inlineHelpText>The sum of all visits a contact has made to your website. This is automatically set by HubSpot for each contact.</inlineHelpText>
        <label>Number of Page Visits</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Owned_By_Me__c</fullName>
        <formula>OwnerId = $User.Id</formula>
        <label>Owned By Me</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ownership_Age__c</fullName>
        <formula>TODAY() - Ownership_Changed_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ownership Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ownership_Changed_Date__c</fullName>
        <label>Ownership Changed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PartnersAccountId__c</fullName>
        <description>SF-1406. Ticket description: this is a dependency for migration from DCRM to SFDC. Field is pertinent to the migration effort.</description>
        <externalId>true</externalId>
        <label>PartnersAccountId</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PartnersProfileStatus__c</fullName>
        <description>Phase 1</description>
        <label>Partners Profile Status</label>
        <picklist>
            <picklistValues>
                <fullName>Paid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unclaimed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Freemium</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Partners_Metadata__c</fullName>
        <label>Partners Metadata</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Phone_Extension__c</fullName>
        <label>Phone Extension</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portfolio__c</fullName>
        <formula>IF( text(Local_Sales_Market__r.Country__c ) = &apos;CA&apos;, &apos;Senior Sales Executive&apos;, Text(Zip__r.Portfolio__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Portfolio</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Potential_Duplicates__c</fullName>
        <description>csp-1935</description>
        <label>Potential Duplicates</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PreviousOwner__c</fullName>
        <label>Previous Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Category_Formula__c</fullName>
        <description>To Copy down the Primary Category and Sync it to Hubspot</description>
        <formula>Primary_Category__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Category Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Category__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Primary Category</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Select an active Category</errorMessage>
            <filterItems>
                <field>Category__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Category__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Privileged_Client_Feedback_Detail__c</fullName>
        <description>CSP-3220 Privileged text field for sales and service tracking of all feedback - good / bad / questions / comments / concerns regarding the acquisition</description>
        <inlineHelpText>Privileged field for sales and service tracking of all feedback - good / bad / questions / comments / concerns regarding the acquisition</inlineHelpText>
        <label>Privileged Client Feedback Detail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Privileged_Client_Feedback__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CSP-3220: Track vendors that have questions about the acquisition</description>
        <inlineHelpText>CSP-3220 Privileged field for sales and service tracking of all feedback - good / bad / questions / comments / concerns regarding the acquisition</inlineHelpText>
        <label>Privileged Client Feedback</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProductInterest__c</fullName>
        <description>Phase 1 National</description>
        <label>Product Interest</label>
        <picklist>
            <picklistValues>
                <fullName>Print</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Programmatic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Content</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event Activation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Video</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Galleries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>The Knot Couture Show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tentpole</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Gen / Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Affiliate</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Profile__c</fullName>
        <description>SF-1406</description>
        <externalId>true</externalId>
        <label>ProfileID</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_Details__c</fullName>
        <description>csp-1940</description>
        <label>Reason Details</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReasonnotIn__c</fullName>
        <description>Phase 1</description>
        <label>Reason for not including</label>
        <picklist>
            <controllingField>ConciergePrgQua__c</controllingField>
            <picklistValues>
                <fullName>Bad reviews</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chain, bad reviews</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No reviews</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not a good fit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Out of business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Religious organization</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Record_Type_Name__c</fullName>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_ID__c</fullName>
        <displayFormat>LEAD-{000000}</displayFormat>
        <externalId>true</externalId>
        <inlineHelpText>A system-generated id that uniquely identifies the record</inlineHelpText>
        <label>Reference ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>Phase 1</description>
        <label>Concierge Region</label>
        <picklist>
            <controllingField>ConciergeState__c</controllingField>
            <picklistValues>
                <fullName>North Jersey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central Jersey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northern Jersey Shore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South Jersey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southern Jersey Shore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bronx</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brooklyn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hudson Valley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Long Island</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manhattan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Queens</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staten Island</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Westchester</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>The Catskills</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capital District</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>The Adirondacks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central NY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finger Lakes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Western NY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northern VT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central VT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southern VT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northern NH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central NH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southern NH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northern ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southern ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southern CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northern CT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Regional_Pooling_NVM_Identifier__c</fullName>
        <description>CSP-2867 Regional Pooling Beta Signifier</description>
        <formula>IF(Owner:User.Strategy_Specialist__c = &apos;005f100000IUmKd&apos;, TEXT(Owner:User.Regional_Pooling_NVM_Identifier__c), &apos;&apos;)</formula>
        <label>Regional Pooling NVM Identifier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_to_PaidMedia__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Related to Paid Media?(deleted)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Related_to_Paid_Media__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Requested in SS-5894 / CSP-2645</description>
        <label>Related to Paid Media?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Salesforce_Generated_GUID__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Salesforce Generated GUID</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <defaultValue>0</defaultValue>
        <description>CSP-2061</description>
        <label>Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Setting__c</fullName>
        <description>Phase 1</description>
        <label>Setting</label>
        <picklist>
            <picklistValues>
                <fullName>Backyard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ballroom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banquet Hall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brewery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Castle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Church</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>City Hall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Country Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cruise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Farm + Ranch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Garden</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Golf Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Historic Venue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hotel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Library</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lodge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mansion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mosque</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mountain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Museum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open Space</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Park</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Religious Setting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Restaurant</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Source_and_Email_Convert_Compare__c</fullName>
        <formula>IF(And(text(LeadSource)=LeadSourceAcc__c,Email=EmailAccount__c),&quot;Mapping&quot;, 
&quot;Unmap:&quot; &amp; 
IF(text(LeadSource)=LeadSourceAcc__c,&quot;&quot;,&quot;&lt;LeadSource&gt;&quot;)&amp; 
IF(Email=EmailAccount__c,&quot;&quot;,&quot;&lt;Email&gt;&quot;) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Source and  Email Convert Compare</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Storefront_Status__c</fullName>
        <description>SF-1481, used for data migration purposes.</description>
        <label>Storefront Status</label>
        <picklist>
            <picklistValues>
                <fullName>Unclaimed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Claimed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Strategy_Specialist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Strategist</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Lead_Strategy_Specialists</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>